--- a/data/index.html
+++ b/data/index.html
@@ -25,9 +25,13 @@
 <a href="https://github.com/georgf/fx-data-explorer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
 
 <form>
-  New in version:
-  <select id="new_in_version">
-    <option value="all" selected="selected">All</option>
+  <select id="select_constraint">
+    <option value="is_in" selected="selected">Is recorded in</option>
+    <option value="new_in">Is new in</option>
+  </select>
+  version:
+  <select id="select_version">
+    <option id="version_any" value="any" selected="selected">Any</option>
   </select>
   <br />
   <input id="optout" type="checkbox" checked="checked">
