Add text field search

--- a/data/index.html
+++ b/data/index.html
@@ -36,6 +36,13 @@
   <br />
   <input id="optout" type="checkbox" checked="checked">
   <label for="optout">opt-out measurements only</label>
+  <br />
+  Text search
+  <select id="search_constraint">
+    <option value="in_any" selected="selected">in any text field</option>
+    <option value="in_name">in name</option>
+  </select>
+  <input id="text_search" name="text_search">
 </form>
 
 <div id="measurements">
