Add filtering constraint for description

--- a/data/index.html
+++ b/data/index.html
@@ -41,6 +41,7 @@
   <select id="search_constraint">
     <option value="in_any" selected="selected">in any text field</option>
     <option value="in_name">in name</option>
+    <option value="in_description">in description</option>
   </select>
   <input id="text_search" name="text_search">
 </form>
