Add scalar measurements

--- a/data/index.html
+++ b/data/index.html
@@ -14,9 +14,8 @@
   }
 </style>
 <script type="text/javascript"
-        src="https://code.jquery.com/jquery-3.1.1.min.js"
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous"></script>
+        src="jquery-3.1.1.min.js">
+  </script>
 <script type="text/javascript" src="explore.js"></script>
 </head>
 
