Add query stats

--- a/data/index.html
+++ b/data/index.html
@@ -12,10 +12,14 @@
   table, th, td {
     border: 1px solid black;
   }
+  #stats {
+    font-style: italic;
+    font-size: small;
+  }
 </style>
 <script type="text/javascript"
         src="jquery-3.1.1.min.js">
-  </script>
+</script>
 <script type="text/javascript" src="explore.js"></script>
 </head>
 
@@ -44,6 +48,9 @@
   </select>
   <input id="text_search" name="text_search">
 </form>
+
+<div id="stats">
+</div>
 
 <div id="measurements">
 </div>
