Fix stats page to work with multiple channels

--- a/data/stats.html
+++ b/data/stats.html
@@ -24,6 +24,15 @@
 <br/>
 <br/>
 
+<form>
+  Channel for stats:
+  <select id="select_channel">
+    <option value="release" selected="selected">release</option>
+    <option value="beta">beta</option>
+    <option value="aurora">aurora</option>
+  </select>
+</form>
+
 <svg id="stats" width="960" height="500"></svg>
 
 </body>
