--- a/data/index.html
+++ b/data/index.html
@@ -34,12 +34,12 @@ find probes | <a href="stats.html">stats</a>
 <form>
   Probe is
   <select id="select_constraint">
-    <option value="is_in" selected="selected">recorded in</option>
-    <option value="new_in">new in</option>
+    <option value="is_in" selected="selected">recorded</option>
+    <option value="new_in">new</option>
   </select>
-  version
+  in version
   <select id="select_version">
-    <option id="version_any" value="any" selected="selected">Any</option>
+    <option id="version_any" value="any" selected="selected">any</option>
   </select>
   on channel
   <select id="select_channel">
