--- a/data/stats.html
+++ b/data/stats.html
@@ -5,9 +5,8 @@
 <html>
 <head>
 <title>Firefox data explorer - Stats</title>
-<style type="text/css">
-  
-</style>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="explorer.css">
 
 <script type="text/javascript"
         src="jquery-3.1.1.min.js">
@@ -18,11 +17,17 @@
 
 <body>
 
-<a href="https://github.com/georgf/fx-data-explorer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+<a id="github-banner"
+   href="https://github.com/georgf/fx-data-explorer">
+   <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
+</a>
 
-<a href="index.html">find probes</a> | stats
-<br/>
-<br/>
+<ul class="tabrow">
+  <li><a href="index.html">find probes</a></li>
+  <li class="selected">stats</li>
+</ul>
+
+<div id="content">
 
 <form>
   Channel for stats:
@@ -34,6 +39,8 @@
 </form>
 
 <svg id="stats" width="960" height="500"></svg>
+
+</div>
 
 </body>
 </html>
