Add notice on data validity

--- a/data/index.html
+++ b/data/index.html
@@ -14,6 +14,12 @@
   table, th, td {
     border: 1px solid black;
   }
+  #notice {
+    font-style: italic;
+    margin: 5px;
+    padding: 5px 10px;
+    background-color: #EEEEEE;
+  }
   #stats {
     font-style: italic;
     font-size: small;
@@ -42,6 +48,10 @@
 </ul>
 
 <div id="content">
+
+<div id="notice">
+Note: this data has not been validated properly yet and should be used with care.
+</div>
 
 <form>
   Probe is
