Add last update date
Add last update date and update probe data.

--- a/data/index.html
+++ b/data/index.html
@@ -50,7 +50,8 @@
 <div id="content">
 
 <div id="notice">
-Note: this data has not been validated properly yet and should be used with care.
+Note: this data has not been validated properly yet and should be used with care.<br />
+Last update: <span id="last_update"></span>
 </div>
 
 <form>
