Update to the latest data changes
To accommodate nightly data, the data structure had to change a bit.
revisions.json now has a channel separation on the top-level.

--- a/data/index.html
+++ b/data/index.html
@@ -69,6 +69,7 @@ Last update: <span id="last_update"></span>
     <option value="release" selected="selected">release</option>
     <option value="beta">beta</option>
     <option value="aurora">aurora</option>
+    <option value="nightly">nightly</option>
   </select>
   .
   <br />
