--- a/data/stats.html
+++ b/data/stats.html
@@ -40,6 +40,7 @@
     <option value="release" selected="selected">release</option>
     <option value="beta">beta</option>
     <option value="aurora">aurora</option>
+    <option value="nightly">nightly</option>
   </select>
   for each version?
 </form>
