Fixed broken JS ref. Updated formatting/theme.

--- a/data/index.html
+++ b/data/index.html
@@ -39,19 +39,16 @@
   }
 </style>
 
-
 <!-- CSS  -->
 <!-- CSS:Framework BS 4 alpha -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
 <!-- CSS:Framework:Theme United -->
 <link rel="stylesheet" href="bootstrap.min.css">
-
 
 </head>
 
 <body>
-
+<!-- GitHub:Fork -->
 <!-- <a id="github-banner"
    href="https://github.com/georgf/fx-data-explorer">
    <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
@@ -74,15 +71,10 @@
   </div>
 </nav>
 
+<!-- Loading GIF, replace with bootstrap loadbar? -->
 <div id="overlay">
   <img id="loading-anim" src="loading.gif">
 </div>
-
-<!--
-<ul class="tabrow">
-  <li class="selected">find probes</li>
-  <li><a href="stats.html">stats</a></li>
-</ul> -->
 
 <div class="container-fluid pull-left" id="content">
 
@@ -140,15 +132,15 @@
 </div>
 
 <!-- JS fills values into this container -->
-<div class="container ml-5 mr-5" id="measurements">
+<div class="container table-sm table table-striped table-hover ml-5 mr-5" id="measurements">
 </div>
 
 <!-- JS Files -->
-  <!-- jQuery 3.2.1 -->
+  <!-- JS:jQuery 3.2.1 -->
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
-  <!-- js functions -->
+  <!-- JS:Custom Functions -->
   <script type="text/javascript" src="explore.js"></script>
-  <!-- Latest compiled and minified JavaScript -->
+  <!-- JS:Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
