annoying whitespace to the right.

--- a/data/index.html
+++ b/data/index.html
@@ -15,29 +15,7 @@
 
 <link rel="stylesheet" href="explorer.css">
 
-<style type="text/css">
-  table {
-    border-collapse: collapse;
-  }
 
-  table, th, td {
-    border: 1px solid black;
-  }
-  #notice {
-    font-style: italic;
-    margin: 5px;
-    padding: 5px 10px;
-    background-color: #EEEEEE;
-  }
-  #stats {
-    font-style: italic;
-    font-size: small;
-    margin-bottom: 20px;
-  }
-  #measurements h4 {
-    margin: 10px 5px 3px 0px;
-  }
-</style>
 
 <!-- CSS  -->
 <!-- CSS:Framework BS 4 alpha -->
@@ -132,7 +110,7 @@
 </div>
 
 <!-- JS fills values into this container -->
-<div class="container table-sm table table-striped table-hover ml-5 mr-5" id="measurements">
+<div class="container table-sm table table-striped table-hover table-bordered border-0 ml-5 mr-5" id="measurements">
 </div>
 
 <!-- JS Files -->
