--- a/data/index.html
+++ b/data/index.html
@@ -26,13 +26,14 @@
 </head>
 
 <body>
+
 <!-- GitHub:Fork -->
 <!-- <a id="github-banner"
    href="https://github.com/georgf/fx-data-explorer">
    <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
 </a> -->
 
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary mb-4">
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary mb-3">
   <a class="navbar-brand" href="#">Probe data</a>
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -56,7 +57,7 @@
 
 <div class="container-fluid pull-left" id="content">
 
-<div class="alert alert-dismissible alert-warning mb-3 mt-1" id="notice">
+<div class="alert alert-dismissible alert-warning mb-3" id="notice">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <h4>Notice!</h4>
   <p>
@@ -106,12 +107,14 @@
 
 </div>
 
+<!-- I'm not sure what div tag is here for. -->
 <div class="container ml-4" id="stats">
 </div>
 
 <!-- JS fills values into this container -->
-<div class="container table-sm table table-striped table-hover table-bordered border-0 ml-5 mr-5" id="measurements">
+<div class="table-sm table table-striped table-hover table-bordered border-0 pl-5" id="measurements">
 </div>
+
 
 <!-- JS Files -->
   <!-- JS:jQuery 3.2.1 -->
