fixed width in web-view. spacing. fix: width in collapsed mode.

--- a/data/stats.html
+++ b/data/stats.html
@@ -25,16 +25,16 @@
 </a> -->
 
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary mb-3">
-  <a class="navbar-brand" href="#">Probe data</a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <a class="navbar-brand" href="#">Probe data</a>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+    <ul class="navbar-nav">
+      <li class="nav-item">
         <a class="nav-link" href="index.html">Find probes <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="stats.html">Stats</a>
       </li>
     </ul>
@@ -82,6 +82,8 @@
 <!-- JS Files -->
   <!-- JS:jQuery 3.2.1 -->
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+  <!-- JS:Bootstrap -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <!-- JS:D3 Visualization -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <!-- JS:Custom Functions -->
