--- a/data/index.html
+++ b/data/index.html
@@ -34,12 +34,12 @@
 </a> -->
 
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary mb-3">
-  <a class="navbar-brand" href="#">Probe data</a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <a class="navbar-brand" href="#">Probe data</a>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="index.html">Find probes <span class="sr-only">(current)</span></a>
       </li>
@@ -55,7 +55,7 @@
   <img id="loading-anim" src="loading.gif">
 </div>
 
-<div class="container-fluid pull-left" id="content">
+<div class="container-fluid" id="content">
 
 <div class="alert alert-dismissible alert-warning mb-3" id="notice">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -119,6 +119,8 @@
 <!-- JS Files -->
   <!-- JS:jQuery 3.2.1 -->
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+  <!-- JS:Bootstrap -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <!-- JS:Custom Functions -->
   <script type="text/javascript" src="explore.js"></script>
   <!-- JS:Latest compiled and minified JavaScript -->
