grouped CSS files incl explorer.css

--- a/data/index.html
+++ b/data/index.html
@@ -13,15 +13,13 @@
 
 
 
-<link rel="stylesheet" href="explorer.css">
-
-
-
 <!-- CSS  -->
 <!-- CSS:Framework BS 4 alpha -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <!-- CSS:Framework:Theme United -->
 <link rel="stylesheet" href="bootstrap.min.css">
+<!-- CSS:LoadingBar -->
+<link rel="stylesheet" href="explorer.css">
 
 </head>
 
@@ -49,6 +47,8 @@
     </ul>
   </div>
 </nav>
+
+
 
 <!-- Loading GIF, replace with bootstrap loadbar? -->
 <div id="overlay">
@@ -112,8 +112,9 @@
 </div>
 
 <!-- JS fills values into this container -->
-<div class="table-sm table table-striped table-hover table-bordered border-0 pl-5" id="measurements">
+<div class="container table table-sm table-striped table-hover table-bordered border-0 pl-5" id="measurements">
 </div>
+
 
 
 <!-- JS Files -->
