--- a/data/stats.html
+++ b/data/stats.html
@@ -6,13 +6,15 @@
 <head>
 <title>Firefox data explorer - Stats</title>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="explorer.css">
+
 
 <!-- CSS  -->
 <!-- CSS:Framework BS 4 alpha -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <!-- CSS:Framework:Theme United -->
 <link rel="stylesheet" href="bootstrap.min.css">
+<!-- CSS:Loading -->
+<link rel="stylesheet" href="explorer.css">
 
 </head>
 
