code formatting doc blocks

--- a/data/stats.html
+++ b/data/stats.html
@@ -25,6 +25,8 @@
      href="https://github.com/georgf/fx-data-explorer">
      <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
   </a> -->
+
+  <!-- Navbar -->
   <div class="container-full">
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,6 +51,7 @@
     <img id="loading-anim" src="loading.gif">
   </div>
 
+  <!-- Notice Alert -->
   <div class="container-full" id="alert">
     <div class="alert alert-dismissible alert-warning" id="notice">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -60,6 +63,7 @@
     </div>
   </div>
 
+  <!-- Form -->
   <div class="container-fluid mt-3">
     <form class="ml-1">
       <div class="form-group form-inline">
@@ -81,6 +85,8 @@
   </div>
 
   <hr />
+
+  <!-- SVG placeholder for D3 Chart -->
   <div class="container-fluid">
     <svg class="img-fluid" id="stats" width="960" height="500"></svg>
   </div>
@@ -96,7 +102,6 @@
   <script type="text/javascript" src="stats.js"></script>
   <!-- JS:Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 
 </body>
 </html>
