--- a/data/index.html
+++ b/data/index.html
@@ -28,6 +28,8 @@
      href="https://github.com/georgf/fx-data-explorer">
      <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
   </a> -->
+
+  <!-- Navbar -->
   <div class="container-full">
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,6 +54,7 @@
     <img id="loading-anim" src="loading.gif">
   </div>
 
+  <!-- Notice Alert -->
   <div class="container-full" id="alert">
     <div class="alert alert-dismissible alert-warning" id="notice">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -63,6 +66,7 @@
     </div>
   </div>
 
+  <!-- Form -->
   <div class="container-fluid">
     <form class="ml-1 mt-3">
       <div class="form-group form-inline">
@@ -100,16 +104,15 @@
       </div>
     </form>
   </div>
-    <hr />
+
+  <hr />
+
+  <!-- Placeholders filled by JS -->
   <div class="conainter-fluid">
     <!-- I'm not sure what div tag is here for. -->
-    <div class="container ml-4" id="stats">
-    </div>
-
+    <div class="container ml-4" id="stats"></div>
     <!-- JS fills values into this container -->
-    <div class="container table table-sm table-striped table-hover table-bordered border-0 pl-5" id="measurements">
-    </div>
-
+    <div class="container table table-sm table-striped table-hover table-bordered border-0 pl-5" id="measurements"></div>
   </div>
 
   <!-- JS Files -->
