--- a/data/index.html
+++ b/data/index.html
@@ -12,22 +12,16 @@
   <title>Firefox data explorer - Find probes</title>
 
   <!-- CSS  -->
-  <!-- CSS:Framework BS 4 alpha -->
+  <!-- CSS: Framework BS 4 alpha -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <!-- CSS:Framework:Theme United -->
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <!-- CSS:LoadingBar -->
+  <!-- CSS: Framework:Theme United -->
+  <link rel="stylesheet" href="theme_cosmo.min.css">
+  <!-- CSS: LoadingBar -->
   <link rel="stylesheet" href="explorer.css">
 
 </head>
 
 <body>
-
-  <!-- GitHub:Fork -->
-  <!-- <a id="github-banner"
-     href="https://github.com/georgf/fx-data-explorer">
-     <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
-  </a> -->
 
   <!-- Navbar -->
   <div class="container-full">
@@ -83,7 +77,7 @@
         <select class="form-control ml-2 mr-2" id="select_channel">
           <option value="release" selected="selected">release</option>
           <option value="beta">beta</option>
-          <option value="aurora">aurora</option>
+          <option value="aurora">aurora</option
           <option value="nightly">nightly</option>
         </select>
         .
@@ -109,20 +103,18 @@
 
   <!-- Placeholders filled by JS -->
   <div class="conainter-fluid">
-    <!-- I'm not sure what div tag is here for. -->
     <div class="container ml-4" id="stats"></div>
-    <!-- JS fills values into this container -->
     <div class="container table table-sm table-striped table-hover table-bordered border-0 pl-5" id="measurements"></div>
   </div>
 
   <!-- JS Files -->
-  <!-- JS:jQuery 3.2.1 -->
+  <!-- JS: jQuery 3.2.1 -->
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
-  <!-- JS:Bootstrap -->
+  <!-- JS: Bootstrap -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <!-- JS:Custom Functions -->
+  <!-- JS: Custom Functions -->
   <script type="text/javascript" src="explore.js"></script>
-  <!-- JS:Latest compiled and minified JavaScript -->
+  <!-- JS: Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
