--- a/data/stats.html
+++ b/data/stats.html
@@ -9,22 +9,16 @@
   <meta charset="utf-8" />
 
   <!-- CSS  -->
-  <!-- CSS:Framework BS 4 alpha -->
+  <!-- CSS: Framework BS 4 alpha -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <!-- CSS:Framework:Theme United -->
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <!-- CSS:Loading -->
+  <!-- CSS: Framework:Theme United -->
+  <link rel="stylesheet" href="theme_cosmo.min.css">
+  <!-- CSS: Loading -->
   <link rel="stylesheet" href="explorer.css">
 
 </head>
 
 <body>
-
-  <!-- GitHub:Fork -->
-  <!-- <a id="github-banner"
-     href="https://github.com/georgf/fx-data-explorer">
-     <img src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" />
-  </a> -->
 
   <!-- Navbar -->
   <div class="container-full">
@@ -92,15 +86,15 @@
   </div>
 
   <!-- JS Files -->
-  <!-- JS:jQuery 3.2.1 -->
+  <!-- JS: jQuery 3.2.1 -->
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
-  <!-- JS:Bootstrap -->
+  <!-- JS: Bootstrap -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <!-- JS:D3 Visualization -->
+  <!-- JS: D3 Visualization -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <!-- JS:Custom Functions -->
+  <!-- JS: Custom Functions -->
   <script type="text/javascript" src="stats.js"></script>
-  <!-- JS:Latest compiled and minified JavaScript -->
+  <!-- JS: Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
