Rename to "Firefox probe dictionary"

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Firefox data explorer - Find probes</title>
+  <title>Firefox probe dictionary - Find probes</title>
 
   <!-- CSS  -->
   <!-- CSS: Framework BS 4 alpha -->
