--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-  <title>Firefox data explorer - Stats</title>
+  <title>Firefox probe dictionary - Stats</title>
   <meta charset="utf-8" />
 
   <!-- CSS  -->
