Rename loading overlay

--- a/stats.html
+++ b/stats.html
@@ -41,7 +41,7 @@
   </div>
 
   <!-- Loading GIF, replace with bootstrap loadbar? -->
-  <div id="overlay">
+  <div id="loading-overlay">
     <img id="loading-anim" src="loading.gif">
   </div>
 
