--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <!-- Loading GIF, replace with bootstrap loadbar? -->
-  <div id="overlay">
+  <div id="loading-overlay">
     <img id="loading-anim" src="loading.gif">
   </div>
 
