Add dashboard links to detail view

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
       <br />
       <div id="detail-description">...</div>
       <br />
+      <div>
+        Dashboards:
+        <a id="detail-distribution-dashboard" href="#" target="_blank">distribution</a>
+        |
+        <a id="detail-evolution-dashboard" href="#" target="_blank">evolution</a><br />
+      </div>
+      <br />
       <table>
         <tr><td>Kind:</td><td id="detail-kind"></td></tr>
         <tr><td>Keyed:</td><td id="detail-keyed"></td></tr>
