--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   </div>
 
-  <div id="probe-detail-view" class="container-fluid">
+  <div id="probe-detail-view" class="container-fluid hidden">
     <div id="detail-body">
       <h2 id="detail-probe-name">Probe name</h2>
       <button type="button" class="close"
@@ -122,7 +122,6 @@
       </table>
       <br />
       <div id="detail-description">...</div>
-      <br />
       <br />
       <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
         <tr><td>Kind:</td><td id="detail-kind"></td></tr>
