--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="form-group form-inline">
           <input class="form-control mr-2" id="optout" type="checkbox" checked="checked">
-          <label for="optout">Show only opt-out measurements.</label>
+          <label for="optout">Show only measurements collected on release.</label>
         </div>
         <div class="form-group form-inline">
           Text search
