Revamp data explorer UI (#14)
* Rename to "Firefox probe dictionary".
* Add initial probe detail view.
  * This has some initial probe details and outbound links.
  * Track probe shown in detail view in URI params and restore view state.
* Clean up search results UX
  * Display either "from version X" or "version X to Y" for recording ranges.
  * Use a minimal set of columns.
* Cleanup the release/prerelease notions to avoid misunderstandings.
  * Cleanup opt-out label to "collected on release".
  * Disable searching for prerelease probes on release channel.

--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-  <title>Firefox data explorer - Stats</title>
+  <title>Firefox probe dictionary - Stats</title>
   <meta charset="utf-8" />
 
   <!-- CSS  -->
@@ -41,7 +41,7 @@
   </div>
 
   <!-- Loading GIF, replace with bootstrap loadbar? -->
-  <div id="overlay">
+  <div id="loading-overlay">
     <img id="loading-anim" src="loading.gif">
   </div>
 
