--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Firefox data explorer - Find probes</title>
+  <title>Firefox probe dictionary - Find probes</title>
 
   <!-- CSS  -->
   <!-- CSS: Framework BS 4 alpha -->
@@ -44,68 +44,100 @@
   </div>
 
   <!-- Loading GIF, replace with bootstrap loadbar? -->
-  <div id="overlay">
+  <div id="loading-overlay">
     <img id="loading-anim" src="loading.gif">
   </div>
 
-  <!-- Notice Alert -->
-  <div class="container-full" id="alert">
-    <div class="alert alert-dismissible alert-warning" id="notice">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <h4>Notice!</h4>
-      <p>
-        Note: this data has not been validated properly yet and should be used with care.<br />
-        Last update: <span id="last_update"></span>
-      </p>
+  <!-- Form -->
+  <div id="search-view">
+
+    <div class="container-fluid" id="search-form">
+      <form class="ml-1 mt-3">
+        <div class="form-group form-inline">
+          Probe is
+          <select class="form-control ml-2 mr-2" id="select_constraint">
+            <option value="is_in" selected="selected">recorded</option>
+            <option value="new_in">new</option>
+          </select>
+          in version
+          <select class="form-control ml-2 mr-2" id="select_version">
+            <option id="version_any" value="any" selected="selected">any</option>
+          </select>
+          on channel
+          <select class="form-control ml-2 mr-2" id="select_channel">
+            <option value="release" selected="selected">release</option>
+            <option value="beta">beta</option>
+            <option value="aurora">aurora</option>
+            <option value="nightly">nightly</option>
+          </select>
+          .
+        </div>
+        <div class="form-group form-inline">
+          <input class="form-control mr-2" id="optout" type="checkbox" checked="checked">
+          <label for="optout">Show only measurements collected on release.</label>
+        </div>
+        <div class="form-group form-inline">
+          Text search
+          <select class="form-control ml-2 mr-2" id="search_constraint">
+            <option value="in_any" selected="selected">in any text field</option>
+            <option value="in_name">in name</option>
+            <option value="in_description">in description</option>
+          </select>
+          for:
+          <input class="form-control ml-2 mr-2" id="text_search" name="text_search">
+        </div>
+      </form>
+    </div>
+
+    <hr />
+
+    <!-- Placeholders filled by JS -->
+    <div id="search-results-view" class="container-fluid">
+      <div class="container ml-4" id="stats"></div>
+      <div class="container table table-sm table-striped table-hover table-bordered border-0 pl-5" id="measurements"></div>
+    </div>
+
+  </div>
+
+  <div id="probe-detail-view" class="container-fluid hidden">
+    <div id="detail-body">
+      <h2 id="detail-probe-name">Probe name</h2>
+      <button type="button" class="close"
+              aria-label="Close" id="close-detail-view">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <br />
+      <br />
+      <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
+        <tr><td>Type:</td><td id="detail-probe-type"></td></tr>
+        <tr><td>Population:</td><td id="detail-recording-type"></td></tr>
+        <tr id="detail-dashboard-row">
+          <td>Dashboards:</td>
+          <td>
+            <a id="detail-distribution-dashboard" href="#" target="_blank">distribution</a>
+            |
+            <a id="detail-evolution-dashboard" href="#" target="_blank">evolution</a>
+          </td>
+        </tr>
+      </table>
+      <br />
+      <div id="detail-description">...</div>
+      <br />
+      <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
+        <tr><td>Kind:</td><td id="detail-kind"></td></tr>
+        <tr><td>Keyed:</td><td id="detail-keyed"></td></tr>
+        <tr><td>Recorded in processes:</td><td id="detail-processes"></td></tr>
+        <tr><td>C++ guard:</td><td id="detail-cpp-guard"></td></tr>
+        <tr><td>Bucket count:</td><td id="detail-histogram-bucket-count"></td></tr>
+        <tr><td>Low:</td><td id="detail-histogram-low"></td></tr>
+        <tr><td>High:</td><td id="detail-histogram-high"></td></tr>
+        <tr><td>Methods:</td><td id="detail-event-methods"></td></tr>
+        <tr><td>Objects:</td><td id="detail-event-objects"></td></tr>
+        <tr><td>Extra keys:</td><td id="detail-event-extra-keys"></td></tr>
+      </table>
     </div>
   </div>
 
-  <!-- Form -->
-  <div class="container-fluid">
-    <form class="ml-1 mt-3">
-      <div class="form-group form-inline">
-        Probe is
-        <select class="form-control ml-2 mr-2" id="select_constraint">
-          <option value="is_in" selected="selected">recorded</option>
-          <option value="new_in">new</option>
-        </select>
-        in version
-        <select class="form-control ml-2 mr-2" id="select_version">
-          <option id="version_any" value="any" selected="selected">any</option>
-        </select>
-        on channel
-        <select class="form-control ml-2 mr-2" id="select_channel">
-          <option value="release" selected="selected">release</option>
-          <option value="beta">beta</option>
-          <option value="aurora">aurora</option>
-          <option value="nightly">nightly</option>
-        </select>
-        .
-      </div>
-      <div class="form-group form-inline">
-        <input class="form-control mr-2" id="optout" type="checkbox" checked="checked">
-        <label for="optout">Show only opt-out measurements.</label>
-      </div>
-      <div class="form-group form-inline">
-        Text search
-        <select class="form-control ml-2 mr-2" id="search_constraint">
-          <option value="in_any" selected="selected">in any text field</option>
-          <option value="in_name">in name</option>
-          <option value="in_description">in description</option>
-        </select>
-        for:
-        <input class="form-control ml-2 mr-2" id="text_search" name="text_search">
-      </div>
-    </form>
-  </div>
-
-  <hr />
-
-  <!-- Placeholders filled by JS -->
-  <div class="conainter-fluid">
-    <div class="container ml-4" id="stats"></div>
-    <div class="container table table-sm table-striped table-hover table-bordered border-0 pl-5" id="measurements"></div>
-  </div>
 
   <!-- JS Files -->
   <!-- JS: jQuery 3.2.1 -->
