Add "file a bug" link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <li class="nav-item">
             <a class="nav-link" href="stats.html">Stats</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/georgf/fx-data-explorer/issues/new" target="_blank">File a bug</a>
+          </li>
         </ul>
       </div>
     </nav>
