Support displaying bug numbers in detail view

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
         <tr><td>Kind:</td><td id="detail-kind"></td></tr>
         <tr><td>Keyed:</td><td id="detail-keyed"></td></tr>
+        <tr><td>Bug numbers:</td><td id="detail-bug-numbers"></td></tr>
         <tr><td>Recorded in processes:</td><td id="detail-processes"></td></tr>
         <tr><td>C++ guard:</td><td id="detail-cpp-guard"></td></tr>
         <tr><td>Bucket count:</td><td id="detail-histogram-bucket-count"></td></tr>
