Add support for showing available datasets for fields
This is supporting our concept of “forward” links, getting you from
knowing about data to doing something with it.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
             <a id="detail-evolution-dashboard" href="#" target="_blank">evolution</a>
           </td>
         </tr>
+        <tr id="detail-datasets-row">
+          <td>Available in:</td><td id="detail-datasets-content"></td>
+        </tr>
       </table>
       <br />
       <div id="detail-description">...</div>
