Add environment data (#23)
This adds a temporary approach of adding environment data to the data explorer.

* Add environment data for system.cpu
   * First probes were added in Firefox 39 (see
https://bugzilla.mozilla.org/show_bug.cgi?id=1122052) and Firefox 42
(https://bugzilla.mozilla.org/show_bug.cgi?id=1132558).
   * This shipped to most of release in Firefox 42 though, which is revision:
fc05d86dc3108bbe00b447f450b213b8a976e0f4
   * windows build number & UBR were added in Firefox 47
(https://bugzilla.mozilla.org/show_bug.cgi?id=1255472).
   * That is revision: c1de04f39fa956cfce83f6065b0e709369215ed5
* Add system.os environment data
   * First probes were added in Firefox 39 (see
https://bugzilla.mozilla.org/show_bug.cgi?id=1122052)
   * This shipped to most of release in 42 though, which is revision:
fc05d86dc3108bbe00b447f450b213b8a976e0f4
   * This was extended in 43 (see
https://bugzilla.mozilla.org/show_bug.cgi?id=1128472).
   * That is revision: 9b79adf82b132f5e1fcfee4813a47b5b38bd7521
* Support displaying bug numbers in detail view
* Optionally support "firstVersion" in probe revision ranges
   * This makes it much much easier to enter probe details by hand as it
avoids having to look up revision numbers..
* Escape HTML characters in descriptions (This fixes a not-really related bug i caught.)
* Add support for showing available datasets for fields
   * This is supporting our concept of “forward” links, getting you from
knowing about data to doing something with it.

--- a/index.html
+++ b/index.html
@@ -113,13 +113,8 @@
       <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
         <tr><td>Type:</td><td id="detail-probe-type"></td></tr>
         <tr><td>Population:</td><td id="detail-recording-type"></td></tr>
-        <tr id="detail-dashboard-row">
-          <td>Dashboards:</td>
-          <td>
-            <a id="detail-distribution-dashboard" href="#" target="_blank">distribution</a>
-            |
-            <a id="detail-evolution-dashboard" href="#" target="_blank">evolution</a>
-          </td>
+        <tr id="detail-datasets-row">
+          <td>Available in:</td><td id="detail-datasets-content"></td>
         </tr>
       </table>
       <br />
@@ -128,6 +123,7 @@
       <table class="container table table-sm table-striped table-hover table-bordered border-0 pl-5">
         <tr><td>Kind:</td><td id="detail-kind"></td></tr>
         <tr><td>Keyed:</td><td id="detail-keyed"></td></tr>
+        <tr><td>Bug numbers:</td><td id="detail-bug-numbers"></td></tr>
         <tr><td>Recorded in processes:</td><td id="detail-processes"></td></tr>
         <tr><td>C++ guard:</td><td id="detail-cpp-guard"></td></tr>
         <tr><td>Bucket count:</td><td id="detail-histogram-bucket-count"></td></tr>
