Don't default to showing "expired" probes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <select class="form-control ml-2 mr-2" id="select_constraint">
             <option value="is_in" selected="selected">recorded</option>
             <option value="new_in">new</option>
-            <option value="is_expired" selected="selected">expired</option>
+            <option value="is_expired">expired</option>
           </select>
           in version
           <select class="form-control ml-2 mr-2" id="select_version">
