--- a/stats.html
+++ b/stats.html
@@ -46,9 +46,11 @@
     </nav>
   </div>
 
-  <!-- Loading GIF, replace with bootstrap loadbar? -->
+  <!-- Loading overlay with progress bar. -->
   <div id="loading-overlay">
-    <img id="loading-anim" src="loading.gif">
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
   </div>
 
   <!-- Form -->
