Fix display of last update

--- a/stats.html
+++ b/stats.html
@@ -27,8 +27,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#">Probe dictionary</a>
+
       <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Find probes <span class="sr-only">(current)</span></a>
           </li>
@@ -42,6 +43,9 @@
             <a class="nav-link" href="https://telemetry.mozilla.org/">Telemetry portal</a>
           </li>
         </ul>
+        <div class="navbar-text my-lg-0" id="last-updated">
+          Updated <span id="last-updated-date"></span>
+        </div>
       </div>
     </nav>
   </div>
