--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#">Probe dictionary</a>
+
       <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Find probes <span class="sr-only">(current)</span></a>
           </li>
@@ -41,7 +42,13 @@
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/mozilla/probe-dictionary/issues/new" target="_blank">File a bug</a>
           </li>
+          <li>
+            <a class="nav-link" href="https://telemetry.mozilla.org/">Telemetry portal</a>
+          </li>
         </ul>
+        <div class="navbar-text my-lg-0" id="last-updated">
+          Updated <span id="last-updated-date"></span>
+        </div>
       </div>
     </nav>
   </div>
