Slight styling change for detail filter

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           .
         </div>
         <div id="probe-filters">
-          <div class="form-group form-inline">
+          <div class="form-row form-inline">
             Filter for probes
             <select class="form-control form-control-sm ml-1 mr-1" id="select_constraint">
               <option value="is_in" selected="selected">recorded</option>
@@ -110,7 +110,7 @@
             </select>
             .
           </div>
-          <div class="form-group form-inline" id="optout-selection-element">
+          <div class="form-row form-inline mt-2" id="optout-selection-element">
             <!-- This is not shown for the stats view. -->
             <input class="form-control form-control-sm mr-1" id="optout" type="checkbox">
             <label for="optout">Show only measurements collected on release.</label>
