add link to new probe dictionary

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <body>
 
+  <div class="callout">The new and maintained Probe Dictionary is live at <a href="https://probes.telemetry.mozilla.org/">https://probes.telemetry.mozilla.org</a></div>
+
   <!-- Navbar -->
   <div class="container-full">
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
